Media refactoring z-index for mobile menu fixing

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,7 @@ p {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
@@ -220,10 +221,11 @@ p {
 .mobile-menu__btn {
   position: absolute;
   right: 15px;
-  top: 10px;
+  top: 20px;
   width: 40px;
   height: 40px;
   padding: 0;
+  z-index: 1;
   box-sizing: border-box;
   background-color: transparent;
   border: 0;
